hphp/test/zend/bad/ext/standard/tests/file/bug41655_2.php
<?php
ini_set('open_basedir', /);

	$dir = dirname(__FILE__);
	$a=glob($dir . "/test.*");
	print_r($a);
?>